--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <h1>Hello, World</h1>
-    <p>Merci de lire les consignes dans le README.md</p>
+    <a href="Quentin GIANNINI"></a>     
+    <p>Étudiant en école d'ingénieurs</p>
   </body>
 </html>
