02 Update index.html
nom, prénom, mail, statut.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
 
   <body>
-    <h1>Hello, World</h1>
-    <a href="Quentin GIANNINI"></a>     
+    <h1>Quentin GIANNINI</h1>   
     <p>Étudiant en école d'ingénieurs</p>
+    <div>
+    <a href="mailto:quentin.giannini@etu.estia.fr">quentin.giannini@etu.estia.fr</a>
+    </div>
   </body>
 </html>
