03 Update index.html
Redisposition des infos persos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <h1>Quentin GIANNINI</h1>   
     <p>Étudiant en école d'ingénieurs</p>
-    <div>
+    <section>
+    <h2>Informations personnelles</h2>
     <a href="mailto:quentin.giannini@etu.estia.fr">quentin.giannini@etu.estia.fr</a>
-    </div>
+    
+    </section>
   </body>
 </html>
